update the description of project and other comments for learning
if you found out the language is not suit for you, you can use any other tools to auto translate

--- a/RealTimeDataMonitorDemo/代码详细注释与学习指导.md
+++ b/RealTimeDataMonitorDemo/代码详细注释与学习指导.md
@@ -322,3 +322,7 @@ print("✅ Sent 10 packets")
 4. 可以把你想要详细注释的文件发给我，我帮你逐行加"为什么+学什么+工程意义"！
 
 如需对proto、CI/CD、测试等文件做同样详细注释，也可以随时告诉我！ 
+
+> **2025-07 更新**：项目已内置 `docker-compose.yml`。容器启动时会将 `REDIS_HOST=redis` 作为环境变量注入到应用，
+> 代码通过 `os.getenv("REDIS_HOST")` 动态读取，不再硬编码 `localhost`。这符合 **12-Factor App** 的配置最佳实践，
+> 方便在不同环境（本地 / CI / 云平台）下部署。 
