--- a/RealTimeDataMonitorDemo/运行指南.md
+++ b/RealTimeDataMonitorDemo/运行指南.md
@@ -1,8 +1,30 @@
 # RealTimeDataMonitorDemo 运行指南（多进程+Redis大厂风格）
 
+## 0. 一键启动（推荐）
+
+项目已新增 `docker-compose.yml`，同时定义了两项服务：
+
+* `redis` ‑ 官方 `redis:7-alpine` 镜像
+* `realtime-demo` ‑ gRPC + FastAPI 应用
+
+只需两条指令即可完成**构建 → 启动**：
+
+```powershell
+docker-compose build --no-cache   # 首次或源代码更新后
+docker-compose up -d              # 后台启动全部服务
+```
+
+随后浏览器访问 `http://localhost:8000/docs` 查看自动生成的 API 文档。
+
+> 如果你使用的是 **Docker Desktop**（Win/Mac），确保软件已启动且 WSL2/Hyper-V 已启用。
+
+---
+
 ## 1. 环境准备
 
 ### 1.1 启动 Redis
+> TIP：已使用 `docker-compose` 的同学可 **跳过** 本节，compose 会自动启动 redis 服务。
+
 推荐用 Docker：
 ```powershell
 docker run -d -p 6379:6379 redis
