update the newest build and learning commnet notes

--- a/RealTimeDataMonitorDemo/运行指南.md
+++ b/RealTimeDataMonitorDemo/运行指南.md
@@ -1,46 +1,69 @@
 # RealTimeDataMonitorDemo 运行指南（多进程+Redis大厂风格）
 
-## 0. 一键启动（推荐）
+## 0. 开发模式：是否需要 `--build`？
+
+在写业务代码时，**并不需要每次都 `--build`**。可参考下表：
+
+下面是 **何时需要 / 不需要 `--build`** 的一览（使用纯文本避免表格错位）：
+
+* **第一次克隆仓库 → 需要**
+  * 机器上还没有镜像，需要完整构建。
+
+* **仅改动 `app/*.py`、`tests/*.py` 等 Python 业务代码 → 不需要**
+  * 代码已 COPY 进镜像，容器内有 `uvicorn --reload` 热重载，gRPC 进程也会自动重启。
+  * 直接执行 `docker compose restart realtime-demo`，耗时秒级。
+
+* **新增依赖（修改 `pyproject.toml`/`poetry.lock`）→ 需要**
+  * 依赖安装发生在 Dockerfile build 阶段，必须重建镜像。
+
+* **修改 `Dockerfile` / `docker-compose.yml` → 需要**
+  * 镜像或编排本身变了，必须重建。
+
+---
+
+## 1. 一键启动（推荐）
 
 项目已新增 `docker-compose.yml`，同时定义了两项服务：
 
 * `redis` ‑ 官方 `redis:7-alpine` 镜像
 * `realtime-demo` ‑ gRPC + FastAPI 应用
 
-只需两条指令即可完成**构建 → 启动**：
+只需一条指令即可完成**构建 → 启动**：
 
 ```powershell
-docker-compose build --no-cache   # 首次或源代码更新后
-docker-compose up -d              # 后台启动全部服务
+docker-compose up --build -d   # 第一次或依赖/镜像变动时使用
 ```
 
-随后浏览器访问 `http://localhost:8000/docs` 查看自动生成的 API 文档。
+> 执行完毕应看到两行 `Started` 日志（Redis & realtime-demo），表明服务就绪。
 
-> 如果你使用的是 **Docker Desktop**（Win/Mac），确保软件已启动且 WSL2/Hyper-V 已启用。
-
----
-
-## 1. 环境准备
-
-### 1.1 启动 Redis
-> TIP：已使用 `docker-compose` 的同学可 **跳过** 本节，compose 会自动启动 redis 服务。
-
-推荐用 Docker：
-```powershell
-docker run -d -p 6379:6379 redis
-```
-如无 Docker，可用 Redis for Windows 或 WSL。
-
-### 1.2 安装依赖
-```powershell
-poetry install
-poetry add redis
-```
-
-### 1.3 生成/更新 gRPC 代码
-```powershell
-python -m grpc_tools.protoc -I./proto --python_out=./app --grpc_python_out=./app ./proto/telemetry.proto
-```
+### 1.1 快速闭环验证（每次改动后执行）
+1. **确认端口映射**
+   ```powershell
+   docker ps --filter "name=realtime-demo"
+   # 预期看到
+   # 0.0.0.0:8000->8000/tcp  0.0.0.0:50051->50051/tcp
+   ```
+2. **发送测试数据**
+   ```powershell
+   python send_once.py          # 全局 python
+   # 或
+   poetry run python send_once.py
+   ```
+   预期输出：
+   ```
+   ✅ Sent 10000 packets with diverse random payloads
+   ```
+3. **验证 HTTP 接口**
+   ```powershell
+   curl http://localhost:8000/metrics
+   # 示例返回
+   #[{"device_id":"sensor-1","count":1981}, ...]
+   ```
+4. **验证 Redis**（可选）
+   ```powershell
+   docker exec -it realtime-demo-redis-1 redis-cli HGETALL device_metrics
+   ```
+   预期看到 5 个 sensor-× 及其计数。
 
 ---
 
@@ -50,7 +73,7 @@ python -m grpc_tools.protoc -I./proto --python_out=./app --grpc_python_out=./app
 ```powershell
 poetry run python -m app.ingest
 ```
-- 看到 `INFO:root:🚚 gRPC ingest on :50051` 表示服务已启动。
+- 看到 `INFO:root:🚚 gRPC ingest on :50051` 表示服务已启动。  🚚 可能会乱码
 - **不要关闭此窗口！**
 
 ### 2.2 启动 FastAPI Web 服务
@@ -66,7 +89,7 @@ poetry run uvicorn app.main:app --reload
 ```powershell
 poetry run python send_once.py
 ```
-- 看到 `✅ Sent 10 packets` 表示数据已发送。
+- 看到 `✅ Sent 10000 packets with diverse random payloads` 表示数据已发送。
 
 ### 2.4 查看实时数据
 浏览器访问：
@@ -76,7 +99,11 @@ http://localhost:8000/metrics
 - 应返回：
 ```json
 [
-  {"device_id": "sensor-1", "count": 10}
+  {"device_id": "sensor-1", "count": 1981},
+  {"device_id": "sensor-2", "count": 2009},
+  {"device_id": "sensor-3", "count": 2027},
+  {"device_id": "sensor-4", "count": 1964},
+  {"device_id": "sensor-5", "count": 2019}
 ]
 ```
 
@@ -84,24 +111,23 @@ http://localhost:8000/metrics
 
 ## 3. 常见问题排查
 
-### 3.1 Redis未启动/端口被占用
-- 用 `docker ps` 检查容器状态。
-- 用 `docker exec -it <容器ID> redis-cli` 进入容器，`ping` 应返回 `PONG`。
+> 以下故障排查清单同样改成纯文本，方便在任何编辑器阅读：
 
-### 3.2 Python无法import redis
-- 运行 `poetry add redis` 安装依赖。
+* **gRPC 连接失败： `UNAVAILABLE: 127.0.0.1:50051`**
+  * 可能：gRPC 服务未启动 / 端口未映射 / 被其它程序占用。
+  * 解决：`docker ps` 查看容器；`netstat -ano | findstr :50051` 查占用；`docker compose restart` 或更换端口。
 
-### 3.3 gRPC代码未更新/找不到Ack
-- 重新生成gRPC代码（见1.3）。
+* **Redis 连接拒绝： `ConnectionError connecting to localhost:6379`**
+  * 可能：Redis 容器没跑 / 端口被占用。
+  * 解决：`docker ps` 查看 redis；`docker compose up -d redis` 单独启动；检查 6379 端口是否被防火墙拦截。
 
-### 3.4 /metrics 为空
-- 检查gRPC服务和FastAPI服务是否都在运行。
-- 检查 send_once.py 是否有"Sent 10 packets"。
-- 检查 Redis 是否有数据：
-```powershell
-docker exec -it <容器ID> redis-cli
-127.0.0.1:6379> hgetall device_metrics
-```
+* **`/metrics` 接口返回空数组**
+  * 可能：尚未发送测试数据；或 ingest 写 Redis 失败。
+  * 解决：先运行 `send_once.py`；看 gRPC 日志中是否有 Redis 错误。
+
+* **镜像构建失败**
+  * 可能：网络拉取慢 / Dockerfile 语法错误。
+  * 解决：`docker-compose build --no-cache` 重新构建；`docker compose logs realtime-demo` 查看详细错误。
 
 ---
 
